fixed layout issue

--- a/style.css
+++ b/style.css
@@ -159,7 +159,6 @@ select {
   -webkit-appearance: none; 
   -moz-appearance: none; 
   border-style: none;
-  border-right: 1px solid;
 }
 
 
